cmake_minimum_required(VERSION 3.8)
project(my_robot_hardware)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_lifecycle REQUIRED)
find_package(hardware_interface REQUIRED)
find_package(my_robot_commander_cpp REQUIRED)
find_package(pluginlib REQUIRED)
include_directories(../my_robot_commander_cpp/include/)
include_directories(include)

add_library(
  ${PROJECT_NAME}
  SHARED
  src/arm_hardware_interface.cpp
)
ament_target_dependencies(${PROJECT_NAME} rclcpp rclcpp_lifecycle hardware_interface pluginlib my_robot_commander_cpp) 
pluginlib_export_plugin_description_file(hardware_interface my_robot_hardware.xml)
install(
  TARGETS ${PROJECT_NAME}
  DESTINATION lib
)
install(
  DIRECTORY include
  DESTINATION include
)
ament_export_libraries(${PROJECT_NAME})
ament_export_dependencies(rclcpp rclcpp_lifecycle hardware_interface pluginlib)
ament_package()
